# resume

./: .gitignore  README.md  app.py  data.yaml  pyproject.toml
jinja2static/: pyproject.toml
jinja2static/src/jinja2static/: __init__.py  config.py  server.py
jinja_static/: pyproject.toml
static/: index.css  style.css
templates/: 1_professional_summary.html  2_work_experience.html  3_personal_projects.html  4_technical_skills.html  5_education.html  _row.html  index.html  resume.html  row.html
